change the img url to fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -156,7 +156,7 @@ a:hover {
       rgba(0, 0, 0, 0.1),
       rgba(0, 0, 0, 0.8)
     ),
-    url("./img/sunny.jpg");
+    url("img/sunny.jpg");
   background-size: cover;
   background-position: top center;
   z-index: 1;
