--- a/src/styles.css
+++ b/src/styles.css
@@ -152,11 +152,11 @@ a:hover {
   height: 100%;
   background-color: transparent;
   background-image: linear-gradient(
-      180deg,
-      rgba(0, 0, 0, 0.1),
-      rgba(0, 0, 0, 0.8)
-    ),
-    url("img/sunny.jpg");
+    url("img/sunny.jpg"),
+    180deg,
+    rgba(0, 0, 0, 0.1),
+    rgba(0, 0, 0, 0.8)
+  );
   background-size: cover;
   background-position: top center;
   z-index: 1;
