--- a/src/styles.css
+++ b/src/styles.css
@@ -150,13 +150,13 @@ a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: transparent;
-  background-image: linear-gradient(
+  background-color: #333;
+  /* background-image: linear-gradient(
     url("img/sunny.jpg"),
     180deg,
     rgba(0, 0, 0, 0.1),
     rgba(0, 0, 0, 0.8)
-  );
+  ); */
   background-size: cover;
   background-position: top center;
   z-index: 1;
